--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>eikon parcel starter</title>
+    <title>Catfé</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world</h1>
-
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
