--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,65 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
+    <div class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">logo</div>
+          <div class="col-6">nav</div>
+          <div class="col-12">Titre</div>
+        </div>
+      </div>
+    </div>
+    <main>
+      <div class="contexte">
+        <div class="container">
+          <div class="row">
+            <div class="col-8 offset-2">contexte</div>
+          </div>
+        </div>
+      </div>
+      <div class="cafe">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">Titre cafés</div>
+            <div class="col-4 offset-1">café 1</div>
+            <div class="col-4 offset-1">café 2</div>
+            <div class="col-4 offset-1">café 3</div>
+            <div class="col-4 offset-1">café 4</div>
+            <div class="col-4 offset-2">café 5</div>
+            <div class="col-4 offset-2">café 6</div>
+            <div class="col-4 offset-2">café 7</div>
+            <div class="col-4 offset-2">café 8</div>
+            <div class="col-4 offset-4">button</div>
+          </div>
+        </div>
+      </div>
+      <div class="chats">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">Titre chats</div>
+            <div class="col-8 offset-2">contexte</div>
+            <div class="col-6">chat 1</div>
+            <div class="col-6">chat 2</div>
+            <div class="col-6">chat 3</div>
+            <div class="col-6">chat 4</div>
+            <div class="col-6">chat 5</div>
+            <div class="col-6">chat 6</div>
+            <div class="col-4 offset-4">button</div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">Titre footer</div>
+          <div class="col-4 offset-4">?</div>
+          <div class="col-4 offset-4">logos</div>
+          <div class="col-12">crédits</div>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
