fonts, color, variables, img footer
change in css comprehension

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
     <title>Catfé</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <link rel="stylesheet" href="https://use.typekit.net/juk0qeq.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap");
+    </style>
   </head>
   <body>
     <header>
