html, correction img

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,27 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">logo</div>
-          <div class="col-lg-6">nav</div>
-          <div class="col-12">img logo</div>
-          <div class="col-lg-12">Titre</div>
+          <div class="col-lg-6">
+            <h1>
+              <a href="#"
+                ><img src="../src/img/logo-header.webp" alt="Logo catfé"
+              /></a>
+            </h1>
+          </div>
+          <div class="col-lg-6">
+            <nav>
+              <a href="#">menu</a>
+              <a href="#">réserver</a>
+              <a href="#">chats</a>
+              <a href="#">contacts</a>
+            </nav>
+          </div>
+          <div class="col-12">
+            <h1>
+              <img src="../src/img/logo-negatif-header.webp" alt="logo catfé" />
+            </h1>
+            <h1>RESTAURANT BAR</h1>
+          </div>
         </div>
       </div>
     </header>
@@ -31,32 +48,158 @@
       <div class="contexte">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 offset-lg-2">contexte</div>
+            <div class="col-lg-8 offset-lg-2">
+              <p class="presentation">
+                Cat’fé est un lieu où se retrouvent amoureux des chats et du
+                café. Cet endroit est un lieu de détente qui te permet de passer
+                un agréable moment au côté de nos adorables boules de poils.
+                Tous nos chats ont été adoptés dans des associations et ont hâte
+                de te rencontrer !
+              </p>
+            </div>
           </div>
         </div>
       </div>
       <div class="cafe">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12">Titre cafés</div>
-            <div class="col-lg-4 offset-lg-1 col-md-6 col-sm-12">café 1</div>
-            <div class="col-lg-4 offset-lg-2 col-md-6 col-sm-12">café 2</div>
-            <div class="col-12">button</div>
+            <div class="col-lg-12"><h2>nos cafés</h2></div>
+            <div class="col-lg-4 offset-lg-1 col-md-6 col-sm-12">
+              <article>
+                <h3>Espresso</h3>
+                <span>CHF 4.50</span>
+                <p>Double espresso intense.</p>
+              </article>
+              <article>
+                <h3>Caffè Latte</h3>
+                <span>CHF 4.50</span>
+                <p>
+                  Espresso intense avec de la mousse de lait et une légère
+                  couche de mousse.
+                </p>
+              </article>
+              <article>
+                <h3>Cappuccino</h3>
+                <span>CHF 4.50</span>
+                <p>Espresso intense avec de la mousse de lait douce.</p>
+              </article>
+              <article>
+                <h3>Caramel Macchiatto</h3>
+                <span>CHF 6.20</span>
+                <p>
+                  Espresso intense avec de de la mousse de lait, du sirop de
+                  vanille et de la sauce caramel.
+                </p>
+              </article>
+            </div>
+            <div class="col-lg-4 offset-lg-2 col-md-6 col-sm-12">
+              <article>
+                <h3>Cold Brew</h3>
+                <span>CHF 4.80</span>
+                <p>
+                  Café Cold Brew infusé lentement dans de l'eau froide pour lui
+                  donner une saveur extra douce intense.
+                </p>
+              </article>
+              <article>
+                <h3>Iced Caffè Americano</h3>
+                <span>CHF 4.80</span>
+                <p>Espresso intense complété d'eau, servi sur de la glace.</p>
+              </article>
+              <article>
+                <h3>Iced Caffè Latte</h3>
+                <span>CHF 4.50</span>
+                <p>Espresso intense avec du lait, servi sur de la glace.</p>
+              </article>
+              <article>
+                <h3>Iced Caramel Macchiatoo</h3>
+                <span>CHF 6.20</span>
+                <p>
+                  Espresso intense avec du sirop vanille, du lait et de la sauce
+                  caramel, servi sur de la glace.
+                </p>
+              </article>
+            </div>
+            <div class="col-12"><span class="button">RESERVER</span></div>
           </div>
         </div>
       </div>
       <div class="chats">
         <div class="container">
           <div class="row">
-            <div class="col-12">Titre chats</div>
-            <div class="col-lg-8 offset-lg-2">contexte</div>
-            <div class="col-lg-6 col-md-12">chat 1</div>
-            <div class="col-lg-6 col-md-12">chat 2</div>
-            <div class="col-lg-6 col-md-12">chat 3</div>
-            <div class="col-lg-6 col-md-12">chat 4</div>
-            <div class="col-lg-6 col-md-12">chat 5</div>
-            <div class="col-lg-6 col-md-12">chat 6</div>
-            <div class="col-12">button</div>
+            <div class="col-12"><h2>nos chats</h2></div>
+            <div class="col-lg-8 offset-lg-2">
+              <p class="presentation">
+                Tous nos chats viennent de refuges animaliers et ont tous une
+                histoire. N’hésite pas de venir nous demander si tu as une
+                quelconque question sur l’un de nos chouchous. Profite de ta
+                visite pour passer un superbe moment avec eux.
+              </p>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <article>
+                <h3>RÖSTI</h3>
+                <img src="../src/img/Rosti.webp" alt="Image du chat Rösti" />
+                <p>
+                  Rösti est un maincoon mâle très vif. Celui-ci ne loupera pas
+                  de venir vous faire des câlins.
+                </p>
+              </article>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <article>
+                <h3>NOISY</h3>
+                <img src="../src/img/Noisy.webp" alt="Image du chat Noisy" />
+                <p>
+                  Cette chatte ne manquera pas de vous faire fondre avec ses
+                  ronrons si spéciaux.
+                </p>
+              </article>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <article>
+                <h3>KOÏ</h3>
+                <img src="../src/img/Koi.webp" alt="Image du chat koï" />
+                <p>
+                  Koï est un animal assez craintif qui demandera un peu de votre
+                  temps avant de devenir votre meilleure copine.
+                </p>
+              </article>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <article>
+                <h3>STRAY</h3>
+                <img src="../src/img/Stray.webp" alt="Image du chat Stray" />
+                <p>
+                  Stray est bel et bien le chat le plus surexcité de notre café.
+                  Il lui suffit d’un jouet pour être comblé.
+                </p>
+              </article>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <article>
+                <h3>PIVE</h3>
+                <img src="../src/img/Pive.webp" alt="Image du chat Pive" />
+                <p>
+                  Cette bavarde se fera une joie de vous raconter des tas
+                  d’histoires incompréhensibles.
+                </p>
+              </article>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <article>
+                <h3>CARAMEL</h3>
+                <img
+                  src="../src/img/Caramel.webp"
+                  alt="Image du chat Caramel"
+                />
+                <p>
+                  Contrairement à son frère Rösti, Caramel est un chat très
+                  calme et observateur.
+                </p>
+              </article>
+            </div>
+            <div class="col-12"><span class="button">RESERVER</span></div>
           </div>
         </div>
       </div>
@@ -64,10 +207,26 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-12">Titre footer</div>
-          <div class="col-4 offset-4">localité</div>
-          <div class="col-12">logos</div>
-          <div class="col-12">crédits</div>
+          <div class="col-12"><h2>OÙ NOUS TROUVER</h2></div>
+          <div class="col-4 offset-4">
+            <p class="localite">Rue des Chats 24, 1700 Fribourg</p>
+          </div>
+          <div class="col-12">
+            <a href="#"
+              ><img
+                src="../src/img/facebook.webp"
+                alt="lien vers notre facebook"
+            /></a>
+            <a href="#"
+              ><img
+                src="../src/img/instagram.webp"
+                alt="lien vers notre instagram"
+            /></a>
+            <a href="#"
+              ><img src="../src/img/Pin.webp" alt="lien vers google maps"
+            /></a>
+          </div>
+          <div class="col-12"><p class="credits">© 2022 Catfé</p></div>
         </div>
       </div>
     </footer>
