copy css attribute

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <h1>
               <img src="../src/img/logo-negatif-header.webp" alt="logo catfé" />
             </h1>
-            <h1>RESTAURANT BAR</h1>
+            <h1 class="title-presentation">RESTAURANT BAR</h1>
           </div>
         </div>
       </div>
@@ -120,7 +120,10 @@
                 </p>
               </article>
             </div>
-            <div class="col-12"><span class="button">RESERVER</span></div>
+            <div class="col-12">
+              <span class="button">RESERVER</span
+              ><span class="awesome">arrow-right</span>
+            </div>
           </div>
         </div>
       </div>
@@ -199,7 +202,10 @@
                 </p>
               </article>
             </div>
-            <div class="col-12"><span class="button">RESERVER</span></div>
+            <div class="col-12">
+              <span class="button">RESERVER</span
+              ><span class="awesome">arrow-right</span>
+            </div>
           </div>
         </div>
       </div>
