font awesome, background-colos/img

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap");
     </style>
+    <script
+      src="https://kit.fontawesome.com/11671761fc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -35,17 +39,26 @@
               <a href="#">contacts</a>
             </nav>
           </div>
-          <div class="col-12">
-            <h1>
-              <img src="../src/img/logo-negatif-header.webp" alt="logo catfé" />
-            </h1>
-            <h1 class="title-presentation">RESTAURANT BAR</h1>
+        </div>
+      </div>
+      <div class="introduction">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <h1>
+                <img
+                  src="../src/img/logo-negatif-header.webp"
+                  alt="logo catfé"
+                />
+              </h1>
+              <h1 class="title-presentation">RESTAURANT BAR</h1>
+            </div>
           </div>
         </div>
       </div>
     </header>
     <main>
-      <div class="contexte">
+      <div class="presentation-bar">
         <div class="container">
           <div class="row">
             <div class="col-lg-8 offset-lg-2">
@@ -121,8 +134,8 @@
               </article>
             </div>
             <div class="col-12">
-              <span class="button">RESERVER</span
-              ><span class="awesome">arrow-right</span>
+              <span class="button">RESERVER </span
+              ><i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
         </div>
@@ -139,7 +152,7 @@
                 visite pour passer un superbe moment avec eux.
               </p>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-md-6 col-12">
               <article>
                 <h3>RÖSTI</h3>
                 <img src="../src/img/Rosti.webp" alt="Image du chat Rösti" />
@@ -149,7 +162,7 @@
                 </p>
               </article>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-md-6 col-12">
               <article>
                 <h3>NOISY</h3>
                 <img src="../src/img/Noisy.webp" alt="Image du chat Noisy" />
@@ -159,7 +172,7 @@
                 </p>
               </article>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-md-6 col-12">
               <article>
                 <h3>KOÏ</h3>
                 <img src="../src/img/Koi.webp" alt="Image du chat koï" />
@@ -169,7 +182,7 @@
                 </p>
               </article>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-md-6 col-12">
               <article>
                 <h3>STRAY</h3>
                 <img src="../src/img/Stray.webp" alt="Image du chat Stray" />
@@ -179,7 +192,7 @@
                 </p>
               </article>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-md-6 col-12">
               <article>
                 <h3>PIVE</h3>
                 <img src="../src/img/Pive.webp" alt="Image du chat Pive" />
@@ -189,7 +202,7 @@
                 </p>
               </article>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-md-6 col-12">
               <article>
                 <h3>CARAMEL</h3>
                 <img
@@ -203,15 +216,15 @@
               </article>
             </div>
             <div class="col-12">
-              <span class="button">RESERVER</span
-              ><span class="awesome">arrow-right</span>
+              <span class="button">RESERVER </span
+              ><i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
         </div>
       </div>
     </main>
     <footer>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-12"><h2>OÙ NOUS TROUVER</h2></div>
           <div class="col-4 offset-4">
