header, update img, clean css
padding, position, color, style

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
   <body>
     <header>
       <div class="container">
-        <div class="row">
+        <div class="row align-items-baseline">
           <div class="col-lg-6">
-            <h1>
+            <h1 class="logo">
               <a href="#"
-                ><img src="../src/img/logo-header.webp" alt="Logo catfé"
+                ><img src="../src/img/logo-header.svg" alt="Logo catfé"
               /></a>
             </h1>
           </div>
@@ -35,29 +35,31 @@
             <nav>
               <a href="#">menu</a>
               <a href="#">réserver</a>
-              <a href="#">chats</a>
-              <a href="#">contacts</a>
+              <a href="#chats">chats</a>
+              <a href="#contacts">contacts</a>
             </nav>
-          </div>
-        </div>
-      </div>
-      <div class="introduction">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-12">
-              <h1>
-                <img
-                  src="../src/img/logo-negatif-header.webp"
-                  alt="logo catfé"
-                />
-              </h1>
-              <h1 class="title-presentation">RESTAURANT BAR</h1>
-            </div>
           </div>
         </div>
       </div>
     </header>
     <main>
+      <div class="introduction">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="introduction-in">
+              <div class="col-2">
+                <img
+                  src="../src/img/logo-negatif-header.svg"
+                  alt="logo catfé"
+                />
+              </div>
+              <div class="col-12">
+                <h1 class="title-presentation">RESTAURANT BAR</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="presentation-bar">
         <div class="container">
           <div class="row">
@@ -73,7 +75,7 @@
           </div>
         </div>
       </div>
-      <div class="cafe">
+      <section class="cafe">
         <div class="container">
           <div class="row">
             <div class="col-lg-12"><h2>nos cafés</h2></div>
@@ -139,8 +141,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="chats">
+      </section>
+      <section id="chats" class="chats">
         <div class="container">
           <div class="row">
             <div class="col-12"><h2>nos chats</h2></div>
@@ -221,9 +223,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
-    <footer>
+    <footer id="contacts">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12"><h2>OÙ NOUS TROUVER</h2></div>
