--- a/src/index.html
+++ b/src/index.html
@@ -227,25 +227,27 @@
     </main>
     <footer id="contacts">
       <div class="container-fluid">
-        <div class="row">
+        <div class="row align-items-center flex-column">
           <div class="col-12"><h2>OÙ NOUS TROUVER</h2></div>
-          <div class="col-4 offset-4">
+          <div class="col-4">
             <p class="localite">Rue des Chats 24, 1700 Fribourg</p>
           </div>
-          <div class="col-12">
-            <a href="#"
-              ><img
-                src="../src/img/facebook.webp"
-                alt="lien vers notre facebook"
-            /></a>
-            <a href="#"
-              ><img
-                src="../src/img/instagram.webp"
-                alt="lien vers notre instagram"
-            /></a>
-            <a href="#"
-              ><img src="../src/img/Pin.webp" alt="lien vers google maps"
-            /></a>
+          <div class="col-4">
+            <div class="icons">
+              <a href="#"
+                ><img
+                  src="../src/img/Facebook.svg"
+                  alt="lien vers notre facebook"
+              /></a>
+              <a href="#"
+                ><img
+                  src="../src/img/Instagram.svg"
+                  alt="lien vers notre instagram"
+              /></a>
+              <a href="#"
+                ><img src="../src/img/Pin.svg" alt="lien vers google maps"
+              /></a>
+            </div>
           </div>
           <div class="col-12"><p class="credits">© 2022 Catfé</p></div>
         </div>
