fixing footer, cleaning scss
shadows, background-colors, fixing img footer

--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,14 @@
     <header>
       <div class="container">
         <div class="row align-items-baseline">
-          <div class="col-lg-6">
+          <div class="col-6">
             <h1 class="logo">
               <a href="#"
                 ><img src="../src/img/logo-header.svg" alt="Logo catfé"
               /></a>
             </h1>
           </div>
-          <div class="col-lg-6">
+          <div class="col-6">
             <nav>
               <a href="#">menu</a>
               <a href="#">réserver</a>
@@ -54,7 +54,7 @@
                 />
               </div>
               <div class="col-12">
-                <h1 class="title-presentation">RESTAURANT BAR</h1>
+                <h1 class="title-introduction">RESTAURANT BAR</h1>
               </div>
             </div>
           </div>
@@ -249,10 +249,10 @@
               /></a>
             </div>
           </div>
-          <div class="col-12"><p class="credits">© 2022 Catfé</p></div>
         </div>
       </div>
     </footer>
+    <div class="col-12"><p class="credits">© 2022 Catfé</p></div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
