--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       <div class="presentation-bar">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 offset-lg-2">
+            <div class="col-lg-10 offset-lg-1">
               <p class="presentation">
                 Cat’fé est un lieu où se retrouvent amoureux des chats et du
                 café. Cet endroit est un lieu de détente qui te permet de passer
@@ -77,63 +77,85 @@
       </div>
       <section class="cafe">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-12"><h2>nos cafés</h2></div>
-            <div class="col-lg-4 offset-lg-1 col-md-6 col-sm-12">
-              <article>
-                <h3>Espresso</h3>
-                <span>CHF 4.50</span>
-                <p>Double espresso intense.</p>
-              </article>
-              <article>
-                <h3>Caffè Latte</h3>
-                <span>CHF 4.50</span>
-                <p>
-                  Espresso intense avec de la mousse de lait et une légère
-                  couche de mousse.
-                </p>
-              </article>
-              <article>
-                <h3>Cappuccino</h3>
-                <span>CHF 4.50</span>
-                <p>Espresso intense avec de la mousse de lait douce.</p>
-              </article>
-              <article>
-                <h3>Caramel Macchiatto</h3>
-                <span>CHF 6.20</span>
-                <p>
-                  Espresso intense avec de de la mousse de lait, du sirop de
-                  vanille et de la sauce caramel.
-                </p>
-              </article>
+          <div class="row justify-content-around">
+            <div class="col-lg-12">
+              <h2>nos cafés</h2>
             </div>
-            <div class="col-lg-4 offset-lg-2 col-md-6 col-sm-12">
-              <article>
-                <h3>Cold Brew</h3>
-                <span>CHF 4.80</span>
-                <p>
-                  Café Cold Brew infusé lentement dans de l'eau froide pour lui
-                  donner une saveur extra douce intense.
-                </p>
-              </article>
-              <article>
-                <h3>Iced Caffè Americano</h3>
-                <span>CHF 4.80</span>
-                <p>Espresso intense complété d'eau, servi sur de la glace.</p>
-              </article>
-              <article>
-                <h3>Iced Caffè Latte</h3>
-                <span>CHF 4.50</span>
-                <p>Espresso intense avec du lait, servi sur de la glace.</p>
-              </article>
-              <article>
-                <h3>Iced Caramel Macchiatoo</h3>
-                <span>CHF 6.20</span>
-                <p>
-                  Espresso intense avec du sirop vanille, du lait et de la sauce
-                  caramel, servi sur de la glace.
-                </p>
-              </article>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="container-colonne">
+                <article>
+                  <div class="product-data">
+                    <h3>Espresso</h3>
+                    <span>CHF 4.50</span>
+                  </div>
+                  <p>Double espresso intense.</p>
+                </article>
+                <article>
+                  <div class="product-data">
+                    <h3>Caffè Latte</h3>
+                    <span>CHF 4.50</span>
+                  </div>
+                  <p>
+                    Espresso intense avec de la mousse de lait et une légère
+                    couche de mousse.
+                  </p>
+                </article>
+                <article>
+                  <div class="product-data">
+                    <h3>Cappuccino</h3>
+                    <span>CHF 4.50</span>
+                  </div>
+                  <p>Espresso intense avec de la mousse de lait douce.</p>
+                </article>
+                <article>
+                  <div class="product-data">
+                    <h3>Caramel Macchiatto</h3>
+                    <span>CHF 6.20</span>
+                  </div>
+                  <p>
+                    Espresso intense avec de de la mousse de lait, du sirop de
+                    vanille et de la sauce caramel.
+                  </p>
+                </article>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="container-colonne">
+                <article>
+                  <div class="product-data">
+                    <h3>Cold Brew</h3>
+                    <span>CHF 4.80</span>
+                  </div>
+                  <p>
+                    Café Cold Brew infusé lentement dans de l'eau froide pour
+                    lui donner une saveur extra douce intense.
+                  </p>
+                </article>
+                <article>
+                  <div class="product-data">
+                    <h3>Iced Caffè Americano</h3>
+                    <span>CHF 4.80</span>
+                  </div>
+                  <p>Espresso intense complété d'eau, servi sur de la glace.</p>
+                </article>
+                <article>
+                  <div class="product-data">
+                    <h3>Iced Caffè Latte</h3>
+                    <span>CHF 4.50</span>
+                  </div>
+                  <p>Espresso intense avec du lait, servi sur de la glace.</p>
+                </article>
+                <article>
+                  <div class="product-data">
+                    <h3>Iced Caramel Macchiatoo</h3>
+                    <span>CHF 6.20</span>
+                  </div>
+                  <p>
+                    Espresso intense avec du sirop vanille, du lait et de la
+                    sauce caramel, servi sur de la glace.
+                  </p>
+                </article>
+              </div>
             </div>
             <div class="col-12">
               <span class="button">RESERVER </span
@@ -232,7 +254,7 @@
           <div class="col-4">
             <p class="localite">Rue des Chats 24, 1700 Fribourg</p>
           </div>
-          <div class="col-4">
+          <div class="col-7 col-sm-5 col-lg-3">
             <div class="icons">
               <a href="#"
                 ><img
