--- a/src/index.html
+++ b/src/index.html
@@ -86,14 +86,14 @@
                 <article>
                   <div class="product-data">
                     <h3>Espresso</h3>
-                    <span>CHF 4.50</span>
+                    <span class="product-price">CHF 4.50</span>
                   </div>
                   <p>Double espresso intense.</p>
                 </article>
                 <article>
                   <div class="product-data">
                     <h3>Caffè Latte</h3>
-                    <span>CHF 4.50</span>
+                    <span class="product-price">CHF 4.50</span>
                   </div>
                   <p>
                     Espresso intense avec de la mousse de lait et une légère
@@ -103,14 +103,14 @@
                 <article>
                   <div class="product-data">
                     <h3>Cappuccino</h3>
-                    <span>CHF 4.50</span>
+                    <span class="product-price">CHF 4.50</span>
                   </div>
                   <p>Espresso intense avec de la mousse de lait douce.</p>
                 </article>
                 <article>
                   <div class="product-data">
                     <h3>Caramel Macchiatto</h3>
-                    <span>CHF 6.20</span>
+                    <span class="product-price">CHF 6.20</span>
                   </div>
                   <p>
                     Espresso intense avec de de la mousse de lait, du sirop de
@@ -124,7 +124,7 @@
                 <article>
                   <div class="product-data">
                     <h3>Cold Brew</h3>
-                    <span>CHF 4.80</span>
+                    <span class="product-price">CHF 4.80</span>
                   </div>
                   <p>
                     Café Cold Brew infusé lentement dans de l'eau froide pour
@@ -134,21 +134,21 @@
                 <article>
                   <div class="product-data">
                     <h3>Iced Caffè Americano</h3>
-                    <span>CHF 4.80</span>
+                    <span class="product-price">CHF 4.80</span>
                   </div>
                   <p>Espresso intense complété d'eau, servi sur de la glace.</p>
                 </article>
                 <article>
                   <div class="product-data">
                     <h3>Iced Caffè Latte</h3>
-                    <span>CHF 4.50</span>
+                    <span class="product-price">CHF 4.50</span>
                   </div>
                   <p>Espresso intense avec du lait, servi sur de la glace.</p>
                 </article>
                 <article>
                   <div class="product-data">
                     <h3>Iced Caramel Macchiatoo</h3>
-                    <span>CHF 6.20</span>
+                    <span class="product-price">CHF 6.20</span>
                   </div>
                   <p>
                     Espresso intense avec du sirop vanille, du lait et de la
@@ -158,8 +158,9 @@
               </div>
             </div>
             <div class="col-12">
-              <span class="button">RESERVER </span
-              ><i class="fa-solid fa-arrow-right"></i>
+              <div class="button">
+                <span>RESERVER </span><i class="fa-solid fa-arrow-right"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -240,8 +241,9 @@
               </article>
             </div>
             <div class="col-12">
-              <span class="button">RESERVER </span
-              ><i class="fa-solid fa-arrow-right"></i>
+              <div class="button button-light">
+                <span>RESERVER </span><i class="fa-solid fa-arrow-right"></i>
+              </div>
             </div>
           </div>
         </div>
