--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
           </div>
           <div class="col-6">
             <nav>
-              <a href="#">menu</a>
-              <a href="#">réserver</a>
+              <a href="#cafes">menu</a>
+              <a href="#reservation">réserver</a>
               <a href="#chats">chats</a>
               <a href="#contacts">contacts</a>
             </nav>
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-      <section class="cafe">
+      <section id="cafes" class="cafe">
         <div class="container">
           <div class="row justify-content-around">
             <div class="col-lg-12">
@@ -159,7 +159,9 @@
             </div>
             <div class="col-12">
               <div class="button">
-                <span>RESERVER </span><i class="fa-solid fa-arrow-right"></i>
+                <a href="#" id="reservation"
+                  ><span>RESERVER </span><i class="fa-solid fa-arrow-right"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -181,7 +183,7 @@
               <article>
                 <h3>RÖSTI</h3>
                 <img src="../src/img/Rosti.webp" alt="Image du chat Rösti" />
-                <p>
+                <p class="description-cat">
                   Rösti est un maincoon mâle très vif. Celui-ci ne loupera pas
                   de venir vous faire des câlins.
                 </p>
@@ -191,7 +193,7 @@
               <article>
                 <h3>NOISY</h3>
                 <img src="../src/img/Noisy.webp" alt="Image du chat Noisy" />
-                <p>
+                <p class="description-cat">
                   Cette chatte ne manquera pas de vous faire fondre avec ses
                   ronrons si spéciaux.
                 </p>
@@ -201,7 +203,7 @@
               <article>
                 <h3>KOÏ</h3>
                 <img src="../src/img/Koi.webp" alt="Image du chat koï" />
-                <p>
+                <p class="description-cat">
                   Koï est un animal assez craintif qui demandera un peu de votre
                   temps avant de devenir votre meilleure copine.
                 </p>
@@ -211,7 +213,7 @@
               <article>
                 <h3>STRAY</h3>
                 <img src="../src/img/Stray.webp" alt="Image du chat Stray" />
-                <p>
+                <p class="description-cat">
                   Stray est bel et bien le chat le plus surexcité de notre café.
                   Il lui suffit d’un jouet pour être comblé.
                 </p>
@@ -221,7 +223,7 @@
               <article>
                 <h3>PIVE</h3>
                 <img src="../src/img/Pive.webp" alt="Image du chat Pive" />
-                <p>
+                <p class="description-cat">
                   Cette bavarde se fera une joie de vous raconter des tas
                   d’histoires incompréhensibles.
                 </p>
@@ -234,7 +236,7 @@
                   src="../src/img/Caramel.webp"
                   alt="Image du chat Caramel"
                 />
-                <p>
+                <p class="description-cat">
                   Contrairement à son frère Rösti, Caramel est un chat très
                   calme et observateur.
                 </p>
@@ -242,7 +244,9 @@
             </div>
             <div class="col-12">
               <div class="button button-light">
-                <span>RESERVER </span><i class="fa-solid fa-arrow-right"></i>
+                <a href="#" id="reservation"
+                  ><span>RESERVER </span><i class="fa-solid fa-arrow-right"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -256,19 +260,19 @@
           <div class="col-4">
             <p class="localite">Rue des Chats 24, 1700 Fribourg</p>
           </div>
-          <div class="col-7 col-sm-5 col-lg-3">
+          <div class="col-7 col-sm-5 col-lg-3 col-xl-2">
             <div class="icons">
-              <a href="#"
+              <a target="_blank" href="https://www.facebook.com/"
                 ><img
                   src="../src/img/Facebook.svg"
                   alt="lien vers notre facebook"
               /></a>
-              <a href="#"
+              <a target="_blank" href="https://www.instagram.com/"
                 ><img
                   src="../src/img/Instagram.svg"
                   alt="lien vers notre instagram"
               /></a>
-              <a href="#"
+              <a target="_blank" href="https://www.google.ch/maps"
                 ><img src="../src/img/Pin.svg" alt="lien vers google maps"
               /></a>
             </div>
