cafe separator and col, icon burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
               <a href="#reservation">réserver</a>
               <a href="#chats">chats</a>
               <a href="#contacts">contacts</a>
+              <i class="fa-solid fa-bars burger-menu"></i>
             </nav>
           </div>
         </div>
@@ -81,7 +82,7 @@
             <div class="col-lg-12">
               <h2>nos cafés</h2>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-5 col-sm-12">
               <div class="container-colonne">
                 <article>
                   <div class="product-data">
@@ -119,8 +120,9 @@
                 </article>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-5 col-sm-12">
               <div class="container-colonne">
+                <hr class="separator-line" />
                 <article>
                   <div class="product-data">
                     <h3>Cold Brew</h3>
