fonctionnal burger menu (no style) + fix logo negatif

--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,21 @@
     <header>
       <div class="container">
         <div class="row align-items-baseline">
-          <div class="col-6">
-            <h1 class="logo">
-              <a href="#"
-                ><img src="../src/img/logo-header.svg" alt="Logo catfé"
-              /></a>
-            </h1>
-          </div>
-          <div class="col-6">
-            <nav>
-              <a href="#cafes">menu</a>
-              <a href="#reservation">réserver</a>
-              <a href="#chats">chats</a>
-              <a href="#contacts">contacts</a>
+          <div class="col-12">
+            <div class="header-holder">
+              <h1 class="logo">
+                <a href="#"
+                  ><img src="../src/img/logo-header.svg" alt="Logo catfé"
+                /></a>
+              </h1>
               <i class="fa-solid fa-bars burger-menu"></i>
-            </nav>
+              <nav>
+                <a class="link1" href="#cafes">menu</a>
+                <a class="link2" href="#reservation">réserver</a>
+                <a class="link3" href="#chats">chats</a>
+                <a class="link4" href="#contacts">contacts</a>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="introduction-in">
-              <div class="col-2">
+              <div class="logo-negatif">
                 <img
                   src="../src/img/logo-negatif-header.svg"
                   alt="logo catfé"
@@ -172,7 +172,9 @@
       <section id="chats" class="chats">
         <div class="container">
           <div class="row">
-            <div class="col-12"><h2>nos chats</h2></div>
+            <div class="col-12">
+              <h2>nos chats</h2>
+            </div>
             <div class="col-lg-8 offset-lg-2">
               <p class="presentation">
                 Tous nos chats viennent de refuges animaliers et ont tous une
@@ -244,6 +246,10 @@
                 </p>
               </article>
             </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
             <div class="col-12">
               <div class="button button-light">
                 <a href="#" id="reservation"
