style open-menu burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,10 @@
               </h1>
               <i class="fa-solid fa-bars burger-menu"></i>
               <nav>
-                <a class="link1" href="#cafes">menu</a>
-                <a class="link2" href="#reservation">réserver</a>
-                <a class="link3" href="#chats">chats</a>
-                <a class="link4" href="#contacts">contacts</a>
+                <a class="link link1" href="#cafes">menu</a>
+                <a class="link link2" href="#reservation">réserver</a>
+                <a class="link link3" href="#chats">chats</a>
+                <a class="link link4" href="#contacts">contacts</a>
               </nav>
             </div>
           </div>
