--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
                 </article>
               </div>
             </div>
-            <div class="col-12">
+            <div class="col-6 col-lg-5">
               <div class="button">
                 <a href="#" id="reservation"
                   ><span>RESERVER </span><i class="fa-solid fa-arrow-right"></i
@@ -249,8 +249,8 @@
           </div>
         </div>
         <div class="container">
-          <div class="row">
-            <div class="col-12">
+          <div class="row justify-content-around">
+            <div class="col-6 col-lg-5">
               <div class="button button-light">
                 <a href="#" id="reservation"
                   ><span>RESERVER </span><i class="fa-solid fa-arrow-right"></i
