--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,10 @@
               </h1>
               <i class="fa-solid fa-bars burger-menu"></i>
               <nav>
-                <a class="link link1" href="#cafes">menu</a>
-                <a class="link link2" href="#reservation">réserver</a>
-                <a class="link link3" href="#chats">chats</a>
-                <a class="link link4" href="#contacts">contacts</a>
+                <a class="link" href="#cafes">menu</a>
+                <a class="link" href="#reservation">réserver</a>
+                <a class="link" href="#chats">chats</a>
+                <a class="link" href="#contacts">contacts</a>
               </nav>
             </div>
           </div>
@@ -149,7 +149,7 @@
                 </article>
                 <article>
                   <div class="product-data">
-                    <h3>Iced Caramel Macchiatoo</h3>
+                    <h3>Iced Caramel Macchiatto</h3>
                     <span class="product-price">CHF 6.20</span>
                   </div>
                   <p>
